--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
 publish = "public"
-command = "yarn project-setup; yarn build"
+command = "npm run project-setup; npm run build"
 
 [build.environment]
 HUGO_VERSION = "0.149.0"
-GO_VERSION = "1.24.1"
+GO_VERSION = "1.24.6"
