--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -6,14 +6,14 @@ logo = "images/logo.png"
 logo_darkmode = "images/logo-darkmode.png"
 # use `px` or `x` with logo_width, example: "100px".
 # Note: logo_width is not work with .svg file
-logo_width = "166px"
+logo_width = "120px"
 logo_height = "32px"
 # if logo_webp set false, will not generate WEBP version of logo | default is true
 logo_webp = true
 # logo text will only show when logo is missing.
 logo_text = "Anaherix AB"
 # navbar fixed to top
-navbar_fixed = true
+navbar_fixed = false
 # theme-mode
 theme_switcher = true
 theme_default = "system" # available options [light/dark/system]
@@ -62,8 +62,8 @@ content = "You must replace the **baseURL** in **hugo.toml** file when deploying
 # seo meta data for OpenGraph / Twitter Card
 # seo module: https://github.com/gethugothemes/hugo-modules/tree/master/seo-tools/basic-seo
 [metadata]
-keywords = ["Boilerplate", "Hugo"]
-description = "Hugo & Tailwindcss Starter"
+keywords = ["IT Consultancy", "consultancy", "freelance", "software development", "backend", "backend engineering", "Go", "Golang", "observability", "data visualization", "open source", "open-source"]
+description = "Anaherix AB is an independent IT consultancy delivering expertise in backend engineering, observability, and open-source."
 author = "zeon.studio"
 twitter = "zeon_studio"
 image = "images/og-image.png"
