--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -6,7 +6,7 @@ logo = "images/logo.png"
 logo_darkmode = "images/logo-darkmode.png"
 # use `px` or `x` with logo_width, example: "100px".
 # Note: logo_width is not work with .svg file
-logo_width = "120px"
+logo_width = "160px"
 logo_height = "32px"
 # if logo_webp set false, will not generate WEBP version of logo | default is true
 logo_webp = true
@@ -62,10 +62,10 @@ content = "You must replace the **baseURL** in **hugo.toml** file when deploying
 # seo meta data for OpenGraph / Twitter Card
 # seo module: https://github.com/gethugothemes/hugo-modules/tree/master/seo-tools/basic-seo
 [metadata]
-keywords = ["IT Consultancy", "consultancy", "freelance", "software development", "backend", "backend engineering", "Go", "Golang", "observability", "data visualization", "open source", "open-source"]
+keywords = ["IT Consultancy", "consultancy", "freelance", "software development", "backend", "backend engineering", "backend development", "Go", "Golang", "observability", "data visualization", "open source", "open-source"]
 description = "Anaherix AB is an independent IT consultancy delivering expertise in backend engineering, observability, and open-source."
-author = "zeon.studio"
-twitter = "zeon_studio"
+author = "Marcus Efraimsson / Anaherix AB"
+twitter = "mefraimsson"
 image = "images/og-image.png"
 
 
