--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -38,7 +38,7 @@ preloader = "" # use jpg, png, svg or gif format.
 # Navigation button
 [navigation_button]
 enable = true
-label = "Contact us"
+label = "Work with me"
 link = "contact"
 
 # search
