--- a/hugo.toml
+++ b/hugo.toml
@@ -2,7 +2,7 @@
 # The base URL of your site (required). This will be prepended to all relative URLs.
 baseURL = "https://anaherix.com"
 # Title of your website (required).
-title = "Anaherix AB - Guiding You Through Modern Software Challenges"
+title = "Marcus Efraimsson | Independent Software Consultant & Freelancer - Anaherix AB"
 # Your theme name
 theme = "hugoplate"
 # Default time zone for time stamps; use any valid tz database name: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
